tests/paczka1/small_fuzzy/78374468.err
Error in line 2: BIvE9 A73 41,7
Error in line 1: nnURNSxhMGB S416 11,8
Error in line 7: bgEvF69u4Ms S416 96,9
Error in line 5: A669 A669 60,5
Error in line 13: A669 A73 17,3
